--- a/Lecture4.slides.html
+++ b/Lecture4.slides.html
@@ -4220,7 +4220,7 @@ iIiISJaouBYRERERyRIV1yIiIiIiWaLiWkREREQkS1Rci4iIiIhkiYprEREREZEs+f+67if6QeB0
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>The challenging $\Phi(x) + .05x - 0.5 = 0$ converges under zbrent:</p>
+<p>The challenging $\Phi(x) + .05x - 0.5 = 0$ converges under Brent:</p>
 </div>
 </div>
 </div>
