--- a/Lecture5.slides.html
+++ b/Lecture5.slides.html
@@ -3677,7 +3677,7 @@ In&nbsp;[12]:
 <h2 id="cost-of-hedging">Cost of hedging</h2>
 <p>Hedging are costly in practice</p>
 <ul>
-<li>bid/ask, capital, finacing, rebalancing  etc</li>
+<li>bid/ask, capital, financing, rebalancing  etc</li>
 </ul>
 <p>But not hedging is usually more costly</p>
 <p>We need to minimize the cost of hedging</p>
@@ -4267,11 +4267,11 @@ In&nbsp;[16]:
 <li>Source of Theta includes reduction in maturity and accrual of coupon </li>
 <li>The passing of time is not volatile, it is not considered a risk factor</li>
 <li>Different hedges can lead to different theta profile</li>
-<li>It is not feasilbe nor necessary to maintain a flat theta</li>
+<li>It is neither feasilbe nor necessary to maintain a flat theta</li>
 </ul>
 <p>Theta and convexity are often the trade off.</p>
 <ul>
-<li>Positive theta usually means negative convexity, and vise versa</li>
+<li>Positive theta usually means negative convexity, and vice versa</li>
 </ul>
 </div>
 </div>
