--- a/Lecture7.slides.html
+++ b/Lecture7.slides.html
@@ -6930,7 +6930,7 @@ $$</p>
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="giranov-theorem">Giranov theorem</h2>
+<h2 id="girsanov-theorem">Girsanov theorem</h2>
 <p>Given a 1-D Brownian $w^{\mathbb P}(t)$ in the $\mathbb P$ measure, and a drifted process $x(t)$:</p>
 <p>$$  d x(t) = \theta(t) dt + d w^{\mathbb P} (t)  $$</p>
 <p>The process:
@@ -6949,7 +6949,7 @@ is a martingale in $\mathbb P$: $\mathbb E^{\mathbb P}[m(t) | \mathcal{F}_s] = m
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="giranov-in-one-chart">Giranov in one chart</h2>
+<h2 id="girsanov-in-one-chart">Girsanov in one chart</h2>
 </div>
 </div>
 </div>
@@ -9983,7 +9983,7 @@ SUVORK5CYII=
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="understand-giranov">Understand Giranov</h2>
+<h2 id="understand-girsanov">Understand Girsanov</h2>
 <p>Given a $\mathbb P$ Brownian motion $w^{\mathbb P}(s)$, we try to find a $\mathbb Q$ under which:</p>
 <ul>
 <li>$\frac{x(s)}{\sqrt s} = \frac{w^{\mathbb P}(s) + \theta s}{\sqrt s} = \frac{w^{\mathbb P}(s)}{\sqrt s} + \theta \sqrt s$ is standard normal</li>
@@ -10012,7 +10012,7 @@ SUVORK5CYII=
 $$ \mathbb P [\sup_{s&lt;t} \left(w(s)\right) &gt; b)] = 2\mathbb P[w(t) &gt; b] $$</p>
 <ul>
 <li>the results are similar for hitting a lower barrier $b &lt; 0$</li>
-<li>Giranov theorem can be used to compute the probability of a drifted process $d x(t) = \theta dt + dw(t)$ hitting the barrier by time $t$.</li>
+<li>Girsanov theorem can be used to compute the probability of a drifted process $d x(t) = \theta dt + dw(t)$ hitting the barrier by time $t$.</li>
 </ul>
 </div>
 </div>
@@ -10024,8 +10024,8 @@ $$ \mathbb P [\sup_{s&lt;t} \left(w(s)\right) &gt; b)] = 2\mathbb P[w(t) &gt; b]
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="giranov-in-multimension">Giranov in multimension</h2>
-<p>Giranov theorem is easily extendible to independent multi-D Brownians:</p>
+<h2 id="girsanov-in-multimension">Girsanov in multimension</h2>
+<p>Girsanov theorem is easily extendible to independent multi-D Brownians:</p>
 <p>$$\begin{array}{l}
 \small
 &amp; \int f(x_1, \cdots, x_n) p(x_1, \cdots, x_n) d x_1 \cdots d x_n \\
@@ -10045,7 +10045,7 @@ $$ \mathbb P [\sup_{s&lt;t} \left(w(s)\right) &gt; b)] = 2\mathbb P[w(t) &gt; b]
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="giranov-with-correlated-brownians">Giranov with correlated Brownians</h2>
+<h2 id="girsanov-with-correlated-brownians">Girsanov with correlated Brownians</h2>
 <p>Transform to independent Brownians first:</p>
 <p>$$d \bs w(t) = M d \bs z(t)$$</p>
 <ul>
@@ -13097,7 +13097,7 @@ AIlA4QsAAIBEoPAFAABAIlD4AgAAIBEofAEAAJAI/x+n0B/816qjrwAAAABJRU5ErkJggg==
 <p>Stratification is similar to LDS in spirit, but:</p>
 <ul>
 <li>more difficulty in extending to higher dimensions, the number of strata expodes with dimensions</li>
-<li>less popular than LDS in praticie</li>
+<li>less popular than LDS in practice</li>
 </ul>
 </div>
 </div>
