--- a/Lecture3.slides.html
+++ b/Lecture3.slides.html
@@ -2414,7 +2414,7 @@ $$\scriptsize A_{1}=\left(\begin{matrix}8.04 & 1.98 & 2.19 & 0.163\\1.98 & 3.1 &
 <center><img src = "img/householder.png" height=300 width=300></center>
 
 <ul>
-<li>It is obvious from the figure that: $\bs u = \bs x - \Vert \bs x \Vert_2 \hat{\bs e}_1$.</li>
+<li>It is obvious from the figure that: $\bs u = \frac{1}{2}\left(\bs x - \Vert \bs x \Vert_2 \hat{\bs e}_1\right)$.</li>
 </ul>
 </div>
 </div>
