--- a/Lecture5.slides.html
+++ b/Lecture5.slides.html
@@ -4267,7 +4267,7 @@ In&nbsp;[16]:
 <li>Source of Theta includes reduction in maturity and accrual of coupon </li>
 <li>The passing of time is not volatile, it is not considered a risk factor</li>
 <li>Different hedges can lead to different theta profile</li>
-<li>It is neither feasilbe nor necessary to maintain a flat theta</li>
+<li>It is neither feasible nor necessary to maintain a flat theta</li>
 </ul>
 <p>Theta and convexity are often the trade off.</p>
 <ul>
