--- a/Lecture6.slides.html
+++ b/Lecture6.slides.html
@@ -2503,7 +2503,7 @@ GkPq4dd+6QAAAABJRU5ErkJggg==
 $$</p>
 <p>$\hat{s}^2 = \frac{n}{n-1}\hat{\sigma}^2$ is therefore an unbiased estimator of $\sigma^2$.</p>
 <ul>
-<li>$\hat s^2$ is normally distributed for large $n$, due to central limit theorem</li>
+<li>$\hat s^2$ follows Chi square distribution, converging to normal distribution for large $n$ (central limit theorem)</li>
 </ul>
 </div>
 </div>
