--- a/Lecture3.slides.html
+++ b/Lecture3.slides.html
@@ -6241,6 +6241,7 @@ QmCC
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>$$\exp(-9 r_9)\exp(-(10-9) f_9^{10} ) = \exp(-10 r_{10}) \iff r_{10} = 0.9r_9 + 0.1f_9^{10} $$</p>
 <ul>
+<li>the $f_9^{10}$ is the 9Y to 10Y forward rate as observed at $t=0$.</li>
 <li>The correlation between spot rates are spurious because 10Y spot rate is largely determined by the 9Y spot rates.</li>
 <li>it makes no difference if we have unlimited precision, but we usually only keep few eigen vectors in PCA</li>
 <li>it&#39;s better to model the correlation/covariance matrix of forward rates</li>
