--- a/Lecture3.slides.html
+++ b/Lecture3.slides.html
@@ -2131,7 +2131,7 @@ R^{-1} A &amp;= \Lambda R^{-1} \\
 <li>$A =  R\Lambda R^T$, this diagonalization is called the eigenvalue decomposition (EVD)</li>
 <li>all eigenvalues are positive if and only if $A$ is SPD</li>
 </ul>
-<p>The conclusion holds even if there are duplicated eigen values, with some care. </p>
+<p>The conclusion holds even when there are duplicated eigen values, with some care. </p>
 </div>
 </div>
 </div></section><section>
